# aig230-nlp-project-parliament-factcheck

./: .gitignore  Dockerfile.api  PROJECT_STRUCTURE.md  README.md  activate.sh  docker-compose.yml  dockerfile  inference.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
config/: database.py  model_config.py
data/: extracted_claims.json  factcheck_claim_evidence_explanation.csv  factcheck_claim_evidence_label.csv  factcheck_claim_label.csv  factcheck_stats.csv  gold_factcheck_stats.csv  inference_input.json  liar_silver_master.csv  liar_silver_stats.csv  liar_silver_training_pairs.json  merged_gold_silver_stats.csv  merged_gold_silver_training_pairs.json  not-from-training.json  processed_claims.json  results.json  training_pairs.json
notebooks/: factcheck_gguf_export_colab.ipynb  factcheck_llama_lora_fullft_colab.ipynb  train_factcheck_sft.ipynb
sql/: factcheck_work_setup.sql
src/: api.py  build_factcheck_dataset.py  build_gold_dataset.py  build_liar_silver_dataset.py  build_merged_training_dataset.py  data_loader.py  evidence_retriever.py  extract_claims.py  label_claims.py  labeling_tool.py  preprocess.py  train.py
