[project]
name = "parliament-factcheck"
version = "0.1.0"
description = "NLP fact-checking system for Canadian parliamentary debates on DGX Spark"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.44.0",
    "trl>=0.11.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "spacy>=3.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "wandb>=0.18.0",
    "tensorboard>=2.18.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.28.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "pip>=26.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "jupyterlab>=4.2.0",
    "ipython>=8.29.0",
]

labeling = [
    "streamlit>=1.40.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# SIMPLIFIED: No build-system section needed for pure Python project
